--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
         <base href="/">
         <meta charset="utf-8">
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
         <title>people Matrimony</title>
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -35,6 +36,7 @@
         <link href="/lib/css/layout.min.css" rel="stylesheet" type="text/css"/>
         <link href="/lib/css/light.min.css" rel="stylesheet" type="text/css"/>
         <link href="/lib/css/custom.min.css" rel="stylesheet" type="text/css"/>
+        <link href="/lib/css/socicon.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <!--[if lt IE 10]>
