toolbar style issue fixed

--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -4,7 +4,8 @@
         <base href="/">
         <meta charset="utf-8">
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
         <title>people Matrimony</title>
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -19,8 +20,10 @@
         <link rel="stylesheet" href="app/index.css">
         <link rel="stylesheet" href="app/footer/footer.css">
         <link rel="stylesheet" href="app/main/dashboard/dashboard.css">
+        <link rel="stylesheet" href="app/main/login/login.css">
         <link rel="stylesheet" href="app/navigation/dashboard/dbtoolbar.css">
         <link rel="stylesheet" href="app/toolbar/dashboard/dbToolbar.css">
+        <link rel="stylesheet" href="app/toolbar/profile/profile.css">
         <!-- endinject -->
         <!-- endbuild -->
 
@@ -38,6 +41,7 @@
         <link href="/lib/css/layout.min.css" rel="stylesheet" type="text/css"/>
         <link href="/lib/css/light.min.css" rel="stylesheet" type="text/css"/>
         <link href="/lib/css/custom.min.css" rel="stylesheet" type="text/css"/>
+        <link href="/lib/css/socicon.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <!--[if lt IE 10]>
@@ -68,8 +72,11 @@
         <script src="app/main/dashboard/decline/decline.controller.js"></script>
         <script src="app/main/dashboard/accept/accept.controller.js"></script>
         <script src="app/toolbar/toolbar.module.js"></script>
+        <script src="app/toolbar/profile/profileToolbar.controller.js"></script>
         <script src="app/toolbar/dashboard/dbtoolbar.controller.js"></script>
         <script src="app/navigation/dashboard/navigation.controller.js"></script>
+        <script src="app/main/registration/registration.controller.js"></script>
+        <script src="app/main/profile/profile.controller.js"></script>
         <script src="app/main/login/login.controller.js"></script>
         <script src="app/footer/footer.module.js"></script>
         <script src="app/footer/footer.controller.js"></script>
