setting page style changes

--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="app/main/dashboard/dashboard.css">
         <link rel="stylesheet" href="app/main/login/login.css">
         <link rel="stylesheet" href="app/navigation/dashboard/dbtoolbar.css">
+        <link rel="stylesheet" href="app/navigation/settings/settingnav.css">
         <link rel="stylesheet" href="app/toolbar/dashboard/dbToolbar.css">
         <link rel="stylesheet" href="app/toolbar/profile/profile.css">
         <!-- endinject -->
@@ -88,6 +89,7 @@
         <script src="app/main/registration/registration.controller.js"></script>
         <script src="app/main/profile/profile.controller.js"></script>
         <script src="app/main/login/login.controller.js"></script>
+        <script src="app/navigation/settings/settingNav.controller.js"></script>
         <script src="app/navigation/dashboard/navigation.controller.js"></script>
         <script src="app/footer/footer.module.js"></script>
         <script src="app/footer/footer.controller.js"></script>
