progress bar added

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
         <link href="/lib/css/light.min.css" rel="stylesheet" type="text/css"/>
         <link href="/lib/css/custom.min.css" rel="stylesheet" type="text/css"/>
         <link href="/lib/css/socicon.css" rel="stylesheet" type="text/css"/>
+        <link href="/lib/css/circle.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <!--[if lt IE 10]>
