--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,9 @@
           class="{{state.current.bodyClass || ''}}">
 
 
-        <div id="main" class="animate-slide-up" ui-view="main" layout="column"></div>
+    <div class="page-loading" style="background-color: 	#00ac8d"><img src="/assets/img/logo.png" style="width:90%;margin-top:20px" alt="logo" class="logo-default"/></div>
 
+    <div id="main" class="animate-slide-up" ui-view="main" id="ui-view" layout="column"></div>
         <!-- build:js(src) scripts/vendor.js -->
         <!-- bower:js -->
         <!-- run `gulp inject` to automatically populate bower script dependencies -->
