--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
 
     <div class="page-loading" style="background-color: 	#00ac8d">
-        <img src="/assets/img/logo.png" style="width:100%;" alt="logo" class="logo-default"/></div>
+        <img src="/assets/img/logo10.png" style="width:100%;" alt="logo" class="logo-default"/></div>
 
     <div id="main" class="animate-slide-up" ui-view="main" id="ui-view" layout="column"></div>
         <!-- build:js(src) scripts/vendor.js -->
