--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,8 @@
           class="{{state.current.bodyClass || ''}}">
 
 
-    <div class="page-loading" style="background-color: 	#00ac8d">
-        <img src="/assets/img/logo10.png" style="width:100%;" alt="logo" class="logo-default"/></div>
+    <div class="page-loading" >
+        <img src="/assets/img/logo.png" style="width:220px;" alt="logo" class="logo-default"/></div>
 
     <div id="main" class="animate-slide-up" ui-view="main" id="ui-view" layout="column"></div>
         <!-- build:js(src) scripts/vendor.js -->
