--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
         <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
         <title>people Matrimony</title>
+        <link rel="icon" href="favicon.jpg">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
         <!-- bower:css -->
@@ -38,6 +38,7 @@
         <link href="/lib/css/custom.min.css" rel="stylesheet" type="text/css"/>
         <link href="/lib/css/socicon.css" rel="stylesheet" type="text/css"/>
         <link href="/lib/css/circle.css" rel="stylesheet" type="text/css"/>
+
 
     </head>
 
